browserifyとminifyを--save-devでinstall

--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "browserify root/main.js -o root/app.js && minify root/app.js > root/app.min.js",
+    "build": "npm run browserify && npm run minify",
+    "browserify": "node_modules/.bin/browserify root/main.js -o root/app.js",
+    "minify": "node_modules/.bin/minify root/app.js > root/app.min.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "music-metadata-browser": "^2.5.10"
+  },
+  "devDependencies": {
+    "browserify": "^17.0.0",
+    "minify": "^9.2.0"
   }
 }
