--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "npm run compile && npm run browserify && npm run minify",
-    "compile": "node_modules/.bin/tsc root/main.ts",
-    "browserify": "node_modules/.bin/browserify root/main.js -o root/app.js",
-    "minify": "node_modules/.bin/minify root/app.js > root/app.min.js",
+    "compile": "npx tsc root/main.ts",
+    "browserify": "npx browserify root/main.js -o root/app.js",
+    "minify": "npx minify root/app.js > root/app.min.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
