--- a/package.json
+++ b/package.json
@@ -4,21 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npm run compile && npm run browserify && npm run minify",
-    "compile": "npx tsc main.ts",
-    "browserify": "npx browserify main.js -o dist/app.js",
-    "minify": "npx minify dist/app.js > dist/app.min.js",
+    "build": "npm run compile",
+    "compile": "npx webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "music-metadata-browser": "^2.5.11"
+    "music-metadata": "^10.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.4.1",
-    "browserify": "^17.0.0",
-    "minify": "^9.2.0",
-    "typescript": "^5.5.4"
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.5.4",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4"
   }
 }
