pnpmのsetupを忘れていた問題の修正

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -16,6 +16,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22
+          
+      - uses: pnpm/action-setup@v4
 
       - run: pnpm i --frozen-lockfile
       - run: pnpm run build
